--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -95,6 +95,22 @@
       "fetchWalletsError": "பணப்பைகளை மீட்கத் தவறியது."
     }
   },
+  "ResetWalletPage": {
+    "title": "உங்கள் பணப்பையை மீட்டமைக்கவும்",
+    "subTitle": "அணுகலை மீண்டும் பெறவும் சான்றுகளை மீண்டும் பதிவிறக்கவும் வாலட்டை மீட்டமைக்கவும்.",
+    "popupQuestion": "உங்கள் கடவுக்குறியீட்டை மறந்துவிட்டீர்களா?",
+    "popupInfo1": "உங்கள் கடவுக்குறியீட்டை நினைவில் கொள்ள முடியவில்லை என்றால், கீழே உள்ள பொத்தானைக் கிளிக் செய்வதன் மூலம் அதை மீட்டமைக்கலாம்.",
+    "popupInfo2": {
+      "message": "<strong>{{highlighter1}}:</strong> இது உங்கள் <strong>{{highlighter2}}</strong> மற்றும் நீங்கள் சேர்த்த வேறு எந்த ஆவணங்கள் போன்ற உங்கள் சேமிக்கப்பட்ட அனைத்து அட்டைகளையும் கணக்கிலிருந்து அகற்றும்.",
+      "highlighter1": "தயவுசெய்து கவனிக்கவும்",
+      "highlighter2": "தேசிய அடையாள அட்டை, வரி அடையாள அட்டை, காப்பீட்டுச் சான்றிதழ்"
+    },
+    "popupInfo3": {
+      "message": "மீட்டமைத்த பிறகு, உங்கள் Wallet இல் ஒரு புதிய கடவுக்குறியீட்டையும் <strong>{{highlighter}}</strong> ஐயும் அமைக்க வேண்டும்.",
+      "highlighter": "உங்கள் கார்டுகளை மீண்டும் பதிவிறக்கவும்."
+    },
+    "forgetPasscode": "கடவுக்குறியீட்டை மறந்து விடுங்கள்"
+  },
   "IssuersPage": {
     "Intro": {
       "title": "உங்கள் சரிபார்க்கக்கூடிய சான்றுகளை அணுகவும்",
