--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -95,6 +95,22 @@
       "fetchWalletsError": "فشل في جلب المحافظ."
     }
   },
+  "ResetWalletPage": {
+    "title": "إعادة ضبط محفظتك",
+    "subTitle": "إعادة تعيين المحفظة لاستعادة الوصول وإعادة تنزيل بيانات الاعتماد",
+    "popupQuestion": "هل نسيت رمز المرور الخاص بك؟",
+    "popupInfo1": "إذا لم تتمكن من تذكر رمز المرور الخاص بك، فيمكنك إعادة تعيينه بالنقر فوق الزر أدناه.",
+    "popupInfo2": {
+      "message": "<strong>{{highlighter1}}:</strong> سيؤدي هذا إلى إزالة جميع البطاقات المحفوظة من الحساب — مثل <strong>{{highlighter2}}</strong>، وأي مستندات أخرى أضفتها.",
+      "highlighter1": "يرجى الملاحظة",
+      "highlighter2": "بطاقة الهوية الوطنية، بطاقة الهوية الضريبية، شهادة التأمين"
+    },
+    "popupInfo3": {
+      "message": "بعد إعادة الضبط، ستحتاج إلى تعيين رمز مرور جديد و<strong>{{highlighter}}</strong> في محفظتك.",
+      "highlighter": "أعد تنزيل بطاقاتك"
+    },
+    "forgetPasscode": "ننسى رمز المرور"
+  },
   "IssuersPage": {
     "Intro": {
       "title": "الوصول إلى بيانات الاعتماد التي يمكن التحقق منها",
