[INJIWEB-1533] add translations for different message in pin and reset wallet pages
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -89,9 +89,9 @@
     "error": {
       "walletNotFoundError": "لم يتم العثور على محفظة. يرجى إنشاء واحدة.",
       "pinLengthError": "يجب أن يكون الرقم السري 6 أرقام.",
-      "passcodeMismatchError": "الرمز السري غير متطابق.",
+      "passcodeMismatchError": "رمزا المرور غير متطابقين. يُرجى التأكد من تطابق حقلي رمز المرور تمامًا. أعد إدخالهما وحاول مجددًا.",
       "createWalletError": "فشل إنشاء المحفظة.",
-      "incorrectPinError": "تم إدخال رمز خاطئ.",
+      "incorrectPinError": "رمز المرور غير صالح. رمز المرور الذي أدخلته غير صحيح. يُرجى التحقق والمحاولة مرة أخرى، أو انقر على \"نسيت رمز المرور\" لإعادة تعيينه.",
       "fetchWalletsError": "فشل في جلب المحافظ."
     }
   },
@@ -109,7 +109,8 @@
       "message": "بعد إعادة الضبط، ستحتاج إلى تعيين رمز مرور جديد و<strong>{{highlighter}}</strong> في محفظتك.",
       "highlighter": "أعد تنزيل بطاقاتك"
     },
-    "forgetPasscode": "ننسى رمز المرور"
+    "forgetPasscode": "ننسى رمز المرور",
+    "resetFailure": "حدث خطأ أثناء إعادة ضبط محفظتك. يُرجى المحاولة مجددًا بعد قليل."
   },
   "IssuersPage": {
     "Intro": {
