--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -89,9 +89,9 @@
     "error": {
       "walletNotFoundError": "कोई वॉलेट नहीं मिला। कृपया नया बनाएँ।",
       "pinLengthError": "पिन 6 अंकों का होना चाहिए।",
-      "passcodeMismatchError": "पिन मेल नहीं खाता।",
+      "passcodeMismatchError": "पासकोड मेल नहीं खाते। कृपया सुनिश्चित करें कि दोनों पासकोड फ़ील्ड बिल्कुल मेल खाते हैं। पुनः दर्ज करें और पुनः प्रयास करें।",
       "createWalletError": "वॉलेट निर्माण असफल हुआ।",
-      "incorrectPinError": "गलत पिन दर्ज किया गया।",
+      "incorrectPinError": "अमान्य पासकोड। आपके द्वारा दर्ज किया गया पासकोड गलत है। कृपया जाँचें और पुनः प्रयास करें, या इसे रीसेट करने के लिए 'पासकोड भूल गए' पर क्लिक करें।",
       "fetchWalletsError": "वॉलेट लाने में त्रुटि।"
     }
   },
@@ -109,7 +109,8 @@
       "message": "रीसेट करने के बाद, आपको अपने वॉलेट में एक नया पासकोड और <strong>{{highlighter}}</strong> सेट करना होगा।",
       "highlighter": "अपने कार्ड पुनः डाउनलोड करें"
     },
-    "forgetPasscode": "पासकोड भूल जाओ"
+    "forgetPasscode": "पासकोड भूल जाओ",
+    "resetFailure": "आपका वॉलेट रीसेट करते समय कुछ गड़बड़ी हुई है। कृपया कुछ देर बाद फिर से प्रयास करें।"
   },
   "IssuersPage": {
     "Intro": {
