--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -89,9 +89,9 @@
     "error": {
       "walletNotFoundError": "ಪರ್ಸು ಕಂಡುಬಂದಿಲ್ಲ. ದಯವಿಟ್ಟು ಹೊಸದನ್ನು ರಚಿಸಿ.",
       "pinLengthError": "ಪಿನ್ 6 ಸಂಖ್ಯೆಗಳಾಗಿರಬೇಕು.",
-      "passcodeMismatchError": "ಪಾಸ್ಕೋಡ್ ಹೊಂದಾಣಿಕೆಯಾಗಿಲ್ಲ.",
+      "passcodeMismatchError": "ಪಾಸ್‌ಕೋಡ್‌ಗಳು ಹೊಂದಿಕೆಯಾಗುತ್ತಿಲ್ಲ. ಎರಡೂ ಪಾಸ್‌ಕೋಡ್ ಕ್ಷೇತ್ರಗಳು ನಿಖರವಾಗಿ ಹೊಂದಿಕೆಯಾಗುವುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. ಮರು-ನಮೂದಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
       "createWalletError": "ಪರ್ಸು ರಚನೆ ವಿಫಲವಾಗಿದೆ.",
-      "incorrectPinError": "ತಪ್ಪಾದ ಪಿನ್ ನಮೂದಿಸಲಾಗಿದೆ.",
+      "incorrectPinError": "ಅಮಾನ್ಯ ಪಾಸ್‌ಕೋಡ್. ನೀವು ನಮೂದಿಸಿದ ಪಾಸ್‌ಕೋಡ್ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿರಾ' ಕ್ಲಿಕ್ ಮಾಡಿ.",
       "fetchWalletsError": "ಪರ್ಸುಗಳನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ."
     }
   },
@@ -109,7 +109,8 @@
       "message": "ಮರುಹೊಂದಿಸಿದ ನಂತರ, ನೀವು ನಿಮ್ಮ ವಾಲೆಟ್‌ಗೆ ಹೊಸ ಪಾಸ್‌ಕೋಡ್ ಮತ್ತು <strong>{{ಹೈಲೈಟರ್}}</strong> ಅನ್ನು ಹೊಂದಿಸಬೇಕಾಗುತ್ತದೆ.",
       "highlighter": "ನಿಮ್ಮ ಕಾರ್ಡ್‌ಗಳನ್ನು ಪುನಃ ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ"
     },
-    "forgetPasscode": "ಪಾಸ್‌ಕೋಡ್ ಮರೆತುಬಿಡಿ"
+    "forgetPasscode": "ಪಾಸ್‌ಕೋಡ್ ಮರೆತುಬಿಡಿ",
+    "resetFailure": "ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸುವಾಗ ಏನೋ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಸ್ವಲ್ಪ ಸಮಯದ ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
   },
   "IssuersPage": {
     "Intro": {
