--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -89,9 +89,9 @@
     "error": {
       "walletNotFoundError": "பணப்பை காணவில்லை. தயவுசெய்து ஒன்றை உருவாக்கவும்.",
       "pinLengthError": "பின் 6 இலக்கமாக இருக்க வேண்டும்.",
-      "passcodeMismatchError": "பாஸ்கோடு பொருந்தவில்லை.",
+      "passcodeMismatchError": "கடவுக்குறியீடுகள் பொருந்தவில்லை. இரண்டு கடவுக்குறியீடு புலங்களும் சரியாகப் பொருந்துவதை உறுதிசெய்து கொள்ளவும். மீண்டும் உள்ளிட்டு மீண்டும் முயற்சிக்கவும்.",
       "createWalletError": "பணப்பை உருவாக்கம் தோல்வியடைந்தது.",
-      "incorrectPinError": "தவறான பின் உள்ளிடப்பட்டது.",
+      "incorrectPinError": "தவறான கடவுக்குறியீடு. நீங்கள் உள்ளிட்ட கடவுக்குறியீடு தவறானது. சரிபார்த்து மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க 'கடவுக்குறியீட்டை மறந்துவிட்டீர்களா' என்பதைக் கிளிக் செய்யவும்.",
       "fetchWalletsError": "பணப்பைகளை மீட்கத் தவறியது."
     }
   },
@@ -109,7 +109,8 @@
       "message": "மீட்டமைத்த பிறகு, உங்கள் Wallet இல் ஒரு புதிய கடவுக்குறியீட்டையும் <strong>{{highlighter}}</strong> ஐயும் அமைக்க வேண்டும்.",
       "highlighter": "உங்கள் கார்டுகளை மீண்டும் பதிவிறக்கவும்."
     },
-    "forgetPasscode": "கடவுக்குறியீட்டை மறந்து விடுங்கள்"
+    "forgetPasscode": "கடவுக்குறியீட்டை மறந்து விடுங்கள்",
+    "resetFailure": "உங்கள் வாலட்டை மீட்டமைக்கும்போது ஏதோ தவறு ஏற்பட்டது. சிறிது நேரத்தில் மீண்டும் முயற்சிக்கவும்."
   },
   "IssuersPage": {
     "Intro": {
