[INJIWEB-1533] add and update the testIds in reset wallet component
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -98,16 +98,18 @@
   "ResetWalletPage": {
     "title": "إعادة ضبط محفظتك",
     "subTitle": "إعادة تعيين المحفظة لاستعادة الوصول وإعادة تنزيل بيانات الاعتماد",
-    "popupQuestion": "هل نسيت رمز المرور الخاص بك؟",
-    "popupInfo1": "إذا لم تتمكن من تذكر رمز المرور الخاص بك، فيمكنك إعادة تعيينه بالنقر فوق الزر أدناه.",
-    "popupInfo2": {
-      "message": "<strong>{{highlighter1}}:</strong> سيؤدي هذا إلى إزالة جميع البطاقات المحفوظة من الحساب — مثل <strong>{{highlighter2}}</strong>، وأي مستندات أخرى أضفتها.",
-      "highlighter1": "يرجى الملاحظة",
-      "highlighter2": "بطاقة الهوية الوطنية، بطاقة الهوية الضريبية، شهادة التأمين"
-    },
-    "popupInfo3": {
-      "message": "بعد إعادة الضبط، ستحتاج إلى تعيين رمز مرور جديد و<strong>{{highlighter}}</strong> في محفظتك.",
-      "highlighter": "أعد تنزيل بطاقاتك"
+    "resetInstruction": {
+      "question": "هل نسيت رمز المرور الخاص بك؟",
+      "info1": "إذا لم تتمكن من تذكر رمز المرور الخاص بك، فيمكنك إعادة تعيينه بالنقر فوق الزر أدناه.",
+      "info2": {
+        "message": "<strong>{{highlighter1}}:</strong> سيؤدي هذا إلى إزالة جميع البطاقات المحفوظة من الحساب — مثل <strong>{{highlighter2}}</strong>، وأي مستندات أخرى أضفتها.",
+        "highlighter1": "يرجى الملاحظة",
+        "highlighter2": "بطاقة الهوية الوطنية، بطاقة الهوية الضريبية، شهادة التأمين"
+      },
+      "info3": {
+        "message": "بعد إعادة الضبط، ستحتاج إلى تعيين رمز مرور جديد و<strong>{{highlighter}}</strong> في محفظتك.",
+        "highlighter": "أعد تنزيل بطاقاتك"
+      }
     },
     "forgetPasscode": "ننسى رمز المرور",
     "resetFailure": "حدث خطأ أثناء إعادة ضبط محفظتك. يُرجى المحاولة مجددًا بعد قليل."
