--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -98,16 +98,18 @@
   "ResetWalletPage": {
     "title": "अपना वॉलेट रीसेट करें",
     "subTitle": "पहुँच पुनः प्राप्त करने और क्रेडेंशियल पुनः डाउनलोड करने के लिए वॉलेट रीसेट करें",
-    "popupQuestion": "अपना पासकोड भूल गए?",
-    "popupInfo1": "यदि आपको अपना पासकोड याद नहीं है, तो आप नीचे दिए गए बटन पर क्लिक करके उसे रीसेट कर सकते हैं।",
-    "popupInfo2": {
-      "message": "<strong>{{highlighter1}}:</strong> इससे आपके सभी सहेजे गए कार्ड खाते से हट जाएँगे — जैसे कि आपके <strong>{{highlighter2}}</strong>, और आपके द्वारा जोड़े गए अन्य दस्तावेज़।",
-      "highlighter1": "कृपया ध्यान",
-      "highlighter2": "राष्ट्रीय पहचान पत्र, कर पहचान पत्र, बीमा प्रमाण पत्र"
-    },
-    "popupInfo3": {
-      "message": "रीसेट करने के बाद, आपको अपने वॉलेट में एक नया पासकोड और <strong>{{highlighter}}</strong> सेट करना होगा।",
-      "highlighter": "अपने कार्ड पुनः डाउनलोड करें"
+    "resetInstruction": {
+      "question": "अपना पासकोड भूल गए?",
+      "info1": "यदि आपको अपना पासकोड याद नहीं है, तो आप नीचे दिए गए बटन पर क्लिक करके उसे रीसेट कर सकते हैं।",
+      "info2": {
+        "message": "<strong>{{highlighter1}}:</strong> इससे आपके सभी सहेजे गए कार्ड खाते से हट जाएँगे — जैसे कि आपके <strong>{{highlighter2}}</strong>, और आपके द्वारा जोड़े गए अन्य दस्तावेज़।",
+        "highlighter1": "कृपया ध्यान",
+        "highlighter2": "राष्ट्रीय पहचान पत्र, कर पहचान पत्र, बीमा प्रमाण पत्र"
+      },
+      "info3": {
+        "message": "रीसेट करने के बाद, आपको अपने वॉलेट में एक नया पासकोड और <strong>{{highlighter}}</strong> सेट करना होगा।",
+        "highlighter": "अपने कार्ड पुनः डाउनलोड करें"
+      }
     },
     "forgetPasscode": "पासकोड भूल जाओ",
     "resetFailure": "आपका वॉलेट रीसेट करते समय कुछ गड़बड़ी हुई है। कृपया कुछ देर बाद फिर से प्रयास करें।"
