--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -98,16 +98,18 @@
   "ResetWalletPage": {
     "title": "ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಿ",
     "subTitle": "ಪ್ರವೇಶವನ್ನು ಮರಳಿ ಪಡೆಯಲು ಮತ್ತು ರುಜುವಾತುಗಳನ್ನು ಮರು-ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಿ.",
-    "popupQuestion": "ನಿಮ್ಮ ಪಾಸ್ಕೋಡ್ ಮರೆತಿರುವಿರಾ?",
-    "popupInfo1": "ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ನೆನಪಿಲ್ಲದಿದ್ದರೆ, ಕೆಳಗಿನ ಬಟನ್ ಕ್ಲಿಕ್ ಮಾಡುವ ಮೂಲಕ ನೀವು ಅದನ್ನು ಮರುಹೊಂದಿಸಬಹುದು.",
-    "popupInfo2": {
-      "message": "<strong>{{highlighter1}}:</strong> ಇದು ನಿಮ್ಮ ಎಲ್ಲಾ ಉಳಿಸಿದ ಕಾರ್ಡ್‌ಗಳನ್ನು ಖಾತೆಯಿಂದ ತೆಗೆದುಹಾಕುತ್ತದೆ — ಉದಾಹರಣೆಗೆ ನಿಮ್ಮ <strong>{{highlighter2}}</strong>, ಮತ್ತು ನೀವು ಸೇರಿಸಿರುವ ಯಾವುದೇ ಇತರ ದಾಖಲೆಗಳು.",
-      "highlighter1": "ದಯವಿಟ್ಟು ಗಮನಿಸಿ",
-      "highlighter2": "ರಾಷ್ಟ್ರೀಯ ಗುರುತಿನ ಚೀಟಿ, ತೆರಿಗೆ ಗುರುತಿನ ಚೀಟಿ, ವಿಮಾ ಪ್ರಮಾಣಪತ್ರ"
-    },
-    "popupInfo3": {
-      "message": "ಮರುಹೊಂದಿಸಿದ ನಂತರ, ನೀವು ನಿಮ್ಮ ವಾಲೆಟ್‌ಗೆ ಹೊಸ ಪಾಸ್‌ಕೋಡ್ ಮತ್ತು <strong>{{ಹೈಲೈಟರ್}}</strong> ಅನ್ನು ಹೊಂದಿಸಬೇಕಾಗುತ್ತದೆ.",
-      "highlighter": "ನಿಮ್ಮ ಕಾರ್ಡ್‌ಗಳನ್ನು ಪುನಃ ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ"
+    "resetInstruction": {
+      "question": "ನಿಮ್ಮ ಪಾಸ್ಕೋಡ್ ಮರೆತಿರುವಿರಾ?",
+      "info1": "ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ನೆನಪಿಲ್ಲದಿದ್ದರೆ, ಕೆಳಗಿನ ಬಟನ್ ಕ್ಲಿಕ್ ಮಾಡುವ ಮೂಲಕ ನೀವು ಅದನ್ನು ಮರುಹೊಂದಿಸಬಹುದು.",
+      "info2": {
+        "message": "<strong>{{highlighter1}}:</strong> ಇದು ನಿಮ್ಮ ಎಲ್ಲಾ ಉಳಿಸಿದ ಕಾರ್ಡ್‌ಗಳನ್ನು ಖಾತೆಯಿಂದ ತೆಗೆದುಹಾಕುತ್ತದೆ — ಉದಾಹರಣೆಗೆ ನಿಮ್ಮ <strong>{{highlighter2}}</strong>, ಮತ್ತು ನೀವು ಸೇರಿಸಿರುವ ಯಾವುದೇ ಇತರ ದಾಖಲೆಗಳು.",
+        "highlighter1": "ದಯವಿಟ್ಟು ಗಮನಿಸಿ",
+        "highlighter2": "ರಾಷ್ಟ್ರೀಯ ಗುರುತಿನ ಚೀಟಿ, ತೆರಿಗೆ ಗುರುತಿನ ಚೀಟಿ, ವಿಮಾ ಪ್ರಮಾಣಪತ್ರ"
+      },
+      "info3": {
+        "message": "ಮರುಹೊಂದಿಸಿದ ನಂತರ, ನೀವು ನಿಮ್ಮ ವಾಲೆಟ್‌ಗೆ ಹೊಸ ಪಾಸ್‌ಕೋಡ್ ಮತ್ತು <strong>{{ಹೈಲೈಟರ್}}</strong> ಅನ್ನು ಹೊಂದಿಸಬೇಕಾಗುತ್ತದೆ.",
+        "highlighter": "ನಿಮ್ಮ ಕಾರ್ಡ್‌ಗಳನ್ನು ಪುನಃ ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ"
+      }
     },
     "forgetPasscode": "ಪಾಸ್‌ಕೋಡ್ ಮರೆತುಬಿಡಿ",
     "resetFailure": "ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸುವಾಗ ಏನೋ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಸ್ವಲ್ಪ ಸಮಯದ ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
