[INJIWEB-1541] rename testIds
Changes include
 - pin->passcode
 - reset-wallet -> reset-passcode

Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -76,7 +76,7 @@
       "retry": "إعادة المحاولة"
     }
   },
-  "PinPage": {
+  "PasscodePage": {
     "submit": "إرسال",
     "submitting": "جاري الإرسال",
     "setPasscode": "تعيين رمز المرور",
@@ -88,14 +88,14 @@
     "passcodeWarning": "تأكد من تذكر كلمة المرور لتسجيل الدخول في المستقبل",
     "error": {
       "walletNotFoundError": "لم يتم العثور على محفظة. يرجى إنشاء واحدة.",
-      "pinLengthError": "يجب أن يكون الرقم السري 6 أرقام.",
+      "passcodeLengthError": "يجب أن يكون الرقم السري 6 أرقام.",
       "passcodeMismatchError": "رمزا المرور غير متطابقين. يُرجى التأكد من تطابق حقلي رمز المرور تمامًا. أعد إدخالهما وحاول مجددًا.",
       "createWalletError": "فشل إنشاء المحفظة.",
-      "incorrectPinError": "رمز المرور غير صالح. رمز المرور الذي أدخلته غير صحيح. يُرجى التحقق والمحاولة مرة أخرى، أو انقر على \"نسيت رمز المرور\" لإعادة تعيينه.",
+      "incorrectPasscodeError": "رمز المرور غير صالح. رمز المرور الذي أدخلته غير صحيح. يُرجى التحقق والمحاولة مرة أخرى، أو انقر على \"نسيت رمز المرور\" لإعادة تعيينه.",
       "fetchWalletsError": "فشل في جلب المحافظ."
     }
   },
-  "ResetWalletPage": {
+  "ResetPasscodePage": {
     "title": "إعادة ضبط محفظتك",
     "subTitle": "إعادة تعيين المحفظة لاستعادة الوصول وإعادة تنزيل بيانات الاعتماد",
     "resetInstruction": {
