--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -76,7 +76,7 @@
       "retry": "ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ"
     }
   },
-  "PinPage": {
+  "PasscodePage": {
     "submit": "ಸಮರ್ಪಿಸಿ",
     "submitting": "ಸಮರ್ಪಿಸಲಾಗುತ್ತಿದೆ",
     "setPasscode": "ಪಾಸ್‌ಕೋಡ್ ಹೊಂದಿಸಿ",
@@ -88,14 +88,14 @@
     "passcodeWarning": "ಭವಿಷ್ಯದಲ್ಲಿ ಲಾಗಿನ್ ಮಾಡಲು ಪಾಸ್‌ಕೋಡ್ ನೆನಪಿಡಿ",
     "error": {
       "walletNotFoundError": "ಪರ್ಸು ಕಂಡುಬಂದಿಲ್ಲ. ದಯವಿಟ್ಟು ಹೊಸದನ್ನು ರಚಿಸಿ.",
-      "pinLengthError": "ಪಿನ್ 6 ಸಂಖ್ಯೆಗಳಾಗಿರಬೇಕು.",
+      "passcodeLengthError": "ಪಿನ್ 6 ಸಂಖ್ಯೆಗಳಾಗಿರಬೇಕು.",
       "passcodeMismatchError": "ಪಾಸ್‌ಕೋಡ್‌ಗಳು ಹೊಂದಿಕೆಯಾಗುತ್ತಿಲ್ಲ. ಎರಡೂ ಪಾಸ್‌ಕೋಡ್ ಕ್ಷೇತ್ರಗಳು ನಿಖರವಾಗಿ ಹೊಂದಿಕೆಯಾಗುವುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. ಮರು-ನಮೂದಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
       "createWalletError": "ಪರ್ಸು ರಚನೆ ವಿಫಲವಾಗಿದೆ.",
-      "incorrectPinError": "ಅಮಾನ್ಯ ಪಾಸ್‌ಕೋಡ್. ನೀವು ನಮೂದಿಸಿದ ಪಾಸ್‌ಕೋಡ್ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿರಾ' ಕ್ಲಿಕ್ ಮಾಡಿ.",
+      "incorrectPasscodeError": "ಅಮಾನ್ಯ ಪಾಸ್‌ಕೋಡ್. ನೀವು ನಮೂದಿಸಿದ ಪಾಸ್‌ಕೋಡ್ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿರಾ' ಕ್ಲಿಕ್ ಮಾಡಿ.",
       "fetchWalletsError": "ಪರ್ಸುಗಳನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ."
     }
   },
-  "ResetWalletPage": {
+  "ResetPasscodePage": {
     "title": "ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಿ",
     "subTitle": "ಪ್ರವೇಶವನ್ನು ಮರಳಿ ಪಡೆಯಲು ಮತ್ತು ರುಜುವಾತುಗಳನ್ನು ಮರು-ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಿ.",
     "resetInstruction": {
