--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -76,7 +76,7 @@
       "retry": "மீண்டும் முயற்சிக்கவும்"
     }
   },
-  "PinPage": {
+  "PasscodePage": {
     "submit": "சமர்ப்பிக்கவும்",
     "submitting": "சமர்ப்பிக்கப்படுகின்றது",
     "setPasscode": "பாஸ்கோடு அமைக்கவும்",
@@ -88,14 +88,14 @@
     "passcodeWarning": "எதிர்கால உள்நுழைவுக்கு பாஸ்கோடு நினைவில் வைக்கவும்",
     "error": {
       "walletNotFoundError": "பணப்பை காணவில்லை. தயவுசெய்து ஒன்றை உருவாக்கவும்.",
-      "pinLengthError": "பின் 6 இலக்கமாக இருக்க வேண்டும்.",
+      "passcodeLengthError": "பின் 6 இலக்கமாக இருக்க வேண்டும்.",
       "passcodeMismatchError": "கடவுக்குறியீடுகள் பொருந்தவில்லை. இரண்டு கடவுக்குறியீடு புலங்களும் சரியாகப் பொருந்துவதை உறுதிசெய்து கொள்ளவும். மீண்டும் உள்ளிட்டு மீண்டும் முயற்சிக்கவும்.",
       "createWalletError": "பணப்பை உருவாக்கம் தோல்வியடைந்தது.",
-      "incorrectPinError": "தவறான கடவுக்குறியீடு. நீங்கள் உள்ளிட்ட கடவுக்குறியீடு தவறானது. சரிபார்த்து மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க 'கடவுக்குறியீட்டை மறந்துவிட்டீர்களா' என்பதைக் கிளிக் செய்யவும்.",
+      "incorrectPasscodeError": "தவறான கடவுக்குறியீடு. நீங்கள் உள்ளிட்ட கடவுக்குறியீடு தவறானது. சரிபார்த்து மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க 'கடவுக்குறியீட்டை மறந்துவிட்டீர்களா' என்பதைக் கிளிக் செய்யவும்.",
       "fetchWalletsError": "பணப்பைகளை மீட்கத் தவறியது."
     }
   },
-  "ResetWalletPage": {
+  "ResetPasscodePage": {
     "title": "உங்கள் பணப்பையை மீட்டமைக்கவும்",
     "subTitle": "அணுகலை மீண்டும் பெறவும் சான்றுகளை மீண்டும் பதிவிறக்கவும் வாலட்டை மீட்டமைக்கவும்.",
     "resetInstruction": {
