[INJIWEB-1541] rename translation key dashboard -> user
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>

--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -356,7 +356,7 @@
     "success": "Proceed",
     "cancel": "Cancel"
   },
-  "Dashboard": {
+  "User": {
     "Home": {
       "title": "Home",
       "welcome": "Welcome"
