--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -356,7 +356,7 @@
     "success": "Procéder",
     "cancel": "Annuler"
   },
-  "Dashboard": {
+  "User": {
     "Home": {
       "title": "Maison",
       "welcome": "Bienvenu"
