--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -356,7 +356,7 @@
     "success": "आगे बढ़ना",
     "cancel": "रद्द करना"
   },
-  "Dashboard": {
+  "User": {
     "Home": {
       "title": "घर",
       "welcome": "स्वागत"
