--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -356,7 +356,7 @@
     "success": "ಮುಂದುವರೆಯಿರಿ",
     "cancel": "ರದ್ದುಮಾಡು"
   },
-  "Dashboard": {
+  "User": {
     "Home": {
       "title": "ಮನೆ",
       "welcome": "ಸ್ವಾಗತ"
