--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -356,7 +356,7 @@
     "success": "Prosseguir",
     "cancel": "Cancelar"
   },
-  "Dashboard": {
+  "User": {
     "Home": {
       "title": "Lar",
       "welcome": "Bem-vindo"
