--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -356,7 +356,7 @@
     "success": "தொடரவும்",
     "cancel": "ரத்து செய்"
   },
-  "Dashboard": {
+  "User": {
     "Home": {
       "title": "முகப்பு",
       "welcome": "வரவேற்கிறோம்"
