--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -356,7 +356,7 @@
     "success": "يتابع",
     "cancel": "يلغي"
   },
-  "Dashboard": {
+  "User": {
     "Home": {
       "title": "بيت",
       "welcome": "مرحباً"
