[INJIWEB-1563] add adr for style files change
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>

--- a/docs/adr/0.0.1-injiweb-refactoring.md
+++ b/docs/adr/0.0.1-injiweb-refactoring.md
@@ -69,3 +69,24 @@ We will go with TailwindCSS over Material UI for the following reasons
 ## People
 Owners: Vijayakumar, S
 Reviewers / team:  Vijayakumar S , challa,  Shiva Kumar, Sasikumar Ganesan
+
+## 4.1 Usage of UI management library in code
+
+### Context :
+Since we are using TailwindCSS, we are using the classes directly in the code, which is not a good practice, as it makes the code more complex and hard to read.
+
+### Decision :
+We will be using the TailwindCSS classes in a separate file, and use the class names in the code, so that it is easy to read and maintain.
+For example, If we are writing styles for a Page - HomePage, the folder structure will be like this
+
+```
+src
+├── pages
+│   ├── HomePage
+│   │   ├── HomePage.tsx // Home Page Component
+│   │   └── HomePageStyles.ts // Home Page Styles
+```
+
+### People involved :
+Owners: KiruthikaJeyashankar
+Reviewers / team: Gurpreet, Puvvada Bhargavi, KiruthikaJeyashankar, Kamlesh Singh
