[INJIWEB-1557] make changes to show the loading or error modal in the credential types page of an issuer and to redirect the user to stored credentials list page based on the status of the download api call and add translations for the messages
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -139,6 +139,17 @@
       }
     }
   },
+  "CredentialTypesPage": {
+    "download": {
+      "error": {
+        "header": "فشل التنزيل",
+        "subHeader": "تعذر تنزيل البطاقة. يُرجى النقر على زر \"الصفحة الرئيسية\" لبدء العملية."
+      },
+      "loading": {
+        "header": "تنزيل بيانات الاعتماد"
+      }
+    }
+  },
   "RedirectionPage": {
     "navigateButton": "اذهب إلى المنزل",
     "loading": {
