--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -139,6 +139,18 @@
       }
     }
   },
+  "CredentialTypesPage": {
+    "download": {
+      "error": {
+        "header": "ಡೌನ್‌ಲೋಡ್ ವಿಫಲವಾಗಿದೆ",
+        "subHeader": "ಕಾರ್ಡ್ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗುತ್ತಿಲ್ಲ. ಪ್ರಕ್ರಿಯೆಯನ್ನು ಪ್ರಾರಂಭಿಸಲು ದಯವಿಟ್ಟು \"ಮುಖಪುಟಕ್ಕೆ ಹೋಗು\" ಬಟನ್ ಕ್ಲಿಕ್ ಮಾಡಿ."
+      },
+      "loading": {
+        "header": "ರುಜುವಾತುಗಳನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ"
+      }
+    }
+  },
+
   "RedirectionPage": {
     "navigateButton": "ಮನೆಗೆ ಹೋಗಿ",
     "loading": {
