--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -139,6 +139,17 @@
       }
     }
   },
+  "CredentialTypesPage": {
+    "download": {
+      "error": {
+        "header": "பதிவிறக்கம் தோல்வியடைந்தது",
+        "subHeader": "கார்டைப் பதிவிறக்க முடியவில்லை. செயல்முறையைத் தொடங்க \"முகப்புக்குச் செல்\" பொத்தானைக் கிளிக் செய்யவும்."
+      },
+      "loading": {
+        "header": "நற்சான்றிதழைப் பதிவிறக்குகிறது"
+      }
+    }
+  },
   "RedirectionPage": {
     "navigateButton": "வீட்டிற்கு செல்",
     "loading": {
