[INJIWEB-1519] refresh credentials post download
to get the current credentials list

Other changes
- extract VC detail view

Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>

--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -410,7 +410,9 @@
       "networkError": {
         "title": "No Internet Connection",
         "message": "Please check your internet connection and try again."
-      }
+      },
+      "downloadError":  "Download failed. Please retry.",
+      "deleteError": "Failed to delete. Try again."
     }
   },
   "Common": {
