[INJIWEB-1557] make changes to store the credential type display obj into the active and download session to correctly display the credential type name based on the selected or default language
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -76,6 +76,12 @@
       "retry": "إعادة المحاولة"
     }
   },
+  "Layout": {
+    "VCDownload": {
+      "success": "لقد تم تنزيل {{cardType}} الخاص بك بنجاح.",
+      "error": "عفواً! حدث خطأ ما. تعذّر تنزيل {{cardType}}. يُرجى إعادة تحديد جهة الإصدار والمحاولة مرة أخرى."
+    }
+  },
   "PasscodePage": {
     "submit": "إرسال",
     "submitting": "جاري الإرسال",
