--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -76,6 +76,12 @@
       "retry": "फिर से प्रयास करें"
     }
   },
+  "Layout": {
+    "VCDownload": {
+      "success": "आपका {{cardType}} सफलतापूर्वक डाउनलोड हो गया है.",
+      "error": "ओह! कुछ गड़बड़ हो गई। आपका {{cardType}} डाउनलोड नहीं किया जा सका। कृपया जारीकर्ता को फिर से चुनें और फिर से प्रयास करें।"
+    }
+  },
   "PasscodePage": {
     "submit": "सबमिट करें",
     "submitting": "सबमिट हो रहा है",
