--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -76,6 +76,12 @@
       "retry": "ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ"
     }
   },
+  "Layout": {
+    "VCDownload": {
+      "success": "ನಿಮ್ಮ {{cardType}} ಅನ್ನು ಯಶಸ್ವಿಯಾಗಿ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾಗಿದೆ.",
+      "error": "ಓಹ್! ಏನೋ ತಪ್ಪಾಗಿದೆ. ನಿಮ್ಮ {{cardType}} ಅನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. ದಯವಿಟ್ಟು ವಿತರಕರನ್ನು ಮರು ಆಯ್ಕೆ ಮಾಡಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
+    }
+  },
   "PasscodePage": {
     "submit": "ಸಮರ್ಪಿಸಿ",
     "submitting": "ಸಮರ್ಪಿಸಲಾಗುತ್ತಿದೆ",
