--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -76,6 +76,12 @@
       "retry": "மீண்டும் முயற்சிக்கவும்"
     }
   },
+  "Layout": {
+    "VCDownload": {
+      "success": "உங்கள் {{cardType}} வெற்றிகரமாக பதிவிறக்கம் செய்யப்பட்டது.",
+      "error": "அச்சச்சோ! ஏதோ தவறாகிவிட்டது. உங்கள் {{cardType}}-ஐ பதிவிறக்க முடியவில்லை. வழங்குநரை மீண்டும் தேர்ந்தெடுத்து மீண்டும் முயற்சிக்கவும்."
+    }
+  },
   "PasscodePage": {
     "submit": "சமர்ப்பிக்கவும்",
     "submitting": "சமர்ப்பிக்கப்படுகின்றது",
